openweathermap api를 이용하여 날씨정보 json 파싱 및 db에 저장

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
+openweathermap.key=7940d0287d9c387ec0dc32629406e88a
